compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_sized_little_endian_unsigned_constant_pattern.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 875
expression: "\npub fn go(x) {\n  case x {\n    <<1234:16-little-unsigned>> -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<1234:16-little-unsigned>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.bitSize === 16 && x.byteAt(0) === 210 && x.byteAt(1) === 4) {
    return 1;
  } else {
    return 2;
  }
}
