compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_pattern_with_unit.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1804
expression: "\npub fn go(x) {\n  case x {\n    <<1:size(2)-unit(2), 2:size(3)-unit(4)>> -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<1:size(2)-unit(2), 2:size(3)-unit(4)>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToInt } from "../gleam.mjs";

export function go(x) {
  if (
    x.bitSize >= 4 &&
    bitArraySliceToInt(x, 0, 4, true, false) === 1 &&
    x.bitSize === 16 &&
    bitArraySliceToInt(x, 4, 16, true, false) === 2
  ) {
    return 1;
  } else {
    return 2;
  }
}
